--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<br>
 				<div class="conocimientos-elemento"><p>Html</p><p>Css</p></div>
 				<br>
-				<div class="conocimientos-elemento"><p>.Net</p></div>
+				<div class="conocimientos-elemento"><p>.Net</p><p>Git</p></div>
 				<br>
 				<div class="conocimientos-elemento"><p>C#</p><p>Visual Basic</p></div>
 				<br>
@@ -165,6 +165,10 @@
 
 	<!-- Pie de Pagina -->
 	<footer class="footer container">
+		<p class="footer-agradecimientos">
+			Te Invito a Ver el Proyecto de esta Página 
+			<a href="https://github.com/ELIAS2022D/portfolio.gith" target="_blank">@ELIAS2022D/portfolio.gith</a>
+		</p>
 		<p class="footer-dedicatoria">
 			Designed with by 
 			<a href="https://www.linkedin.com/in/el%C3%ADas-daniel-d-errico-1135331aa/" target="_blank">@Elías Daniel D' Errico</a>
