--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</h1>
 		<figure class="hero-imagen-container">
 			<div class="hero-border-imagen"></div>
-			<img class="hero-imagen" src="images/Captura de pantalla_20221106_221511.png" alt="Imagen de Elías Daniel D' Errico">
+			<img class="hero-imagen" src="https://github.com/ELIAS2022D/portfolio.gith/blob/main/images/2-4.jpg?raw=true" alt="Imagen de Elías Daniel D' Errico">
 		</figure>
 	</section>
 	
@@ -50,7 +50,7 @@
 				<p class="informacion-link"><a href="" target="_blank"></a>Un Reporte que tiene como finalidad Desarrollar Informe sobre conceptos a presupuestar para un cliente (Conceptos de Viajes y Contenedores)</p>
 				<br><br>
 				<a href="https://github.com/battlecat999/tldrame/commit/2c587c05a79e884b0d33969b3c0f94e3189b9443" target="_blank" title="Ver Código commit ELIAS2022D (contribuidor)">
-					<img alt="imagen html de ejemplo" src="images/github-logo.webp" width="400" height="200"  />
+					<img alt="imagen html de ejemplo" src="images/github-logo.webp" width="300" height="200"/>
 				</a>
 				<p class="informacion-descripcion">Comparto código en el enlace ⬆️ de la imagen de github</p>
 			</div>
