--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- Seccion de Portada -->
 	<section class="hero container">
 		<h1 class="hero-titulo">
-			Hola! Soy Elías!!!<br>
+			Hola! Soy <span>Elías!!!</span><br>
 			Desarrollador <span>FullStack</span> con<br>
 			Más Experiencia En el <span>Backend</span>
 		</h1>
