--- a/index.html
+++ b/index.html
@@ -44,20 +44,33 @@
 		</div>
 		<article class="portafolio-proyecto">
 			<div class="proyecto-informacion">
-				<h2 class="informacion-titulo">Reporte En Access (Backend y Diseño De Presupuesto)</h2>
+				<h2 class="informacion-titulo">Reporte En Access (Backend y Diseño De Presupuesto)</h2><br>
+				<a href="images/Captura de pantalla 2022-11-27 151430.jpg" target="_blank" title="Ver">
+					<img alt="imagen html de ejemplo" src="https://media.tenor.com/kyeNs4DnuW0AAAAM/dev_animado.gif"/>
+				</a>
+				<br>
 				<p class="informacion-subtitulo">Esto Se Trabajo En Un Sistema De Una Empresa de Logística y Distribución</p>
 				<p class="informacion-fecha">Fecha: <span>06/11/2022</span></p>
 				<p class="informacion-link"><a href="" target="_blank"></a>Un Reporte que tiene como finalidad Desarrollar Informe sobre conceptos a presupuestar para un cliente (Conceptos de Viajes y Contenedores)</p>
 				<br><br>
 				<a href="https://github.com/battlecat999/tldrame/commit/2c587c05a79e884b0d33969b3c0f94e3189b9443" target="_blank" title="Ver Código commit ELIAS2022D (contribuidor)">
-					<img alt="imagen html de ejemplo" src="images/github-logo.webp" width="300" height="125"/>
+					<img alt="imagen html de ejemplo" src="images/github-logo.webp" width="260" height="90"/>
 				</a>
 				<p class="informacion-descripcion">Comparto código en el enlace ⬆️ de la imagen de github</p>
+				<link rel="preconnect" href="https://fonts.googleapis.com">
+				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+				<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 			</div>
-			<figure class="proyecto-imagen-container">
-				<img class="proyecto-imagen" src="images/Captura de pantalla 2022-11-27 151430.jpg" alt="Imagen del Proyecto">
-			</figure>
+			
+			<!-- <figure class="proyecto-imagen-container">
+				<a href="images/Captura de pantalla 2022-11-27 151430.jpg" target="_blank" title="Ver">
+					<img alt="imagen html de ejemplo" src="https://media.tenor.com/kyeNs4DnuW0AAAAM/dev_animado.gif"/>
+				</a>
+				<img class="proyecto-imagen" src="images/Captura de pantalla 2022-11-27 151430.jpg"  alt="Imagen del Proyecto">
+				<a href="images/Captura de pantalla 2022-11-27 151430.jpg" target="_blank" title="VER"></a>
+			</figure> -->
 		</article>
+	<br>
 	</section>
 
 	<!-- Seccion de Experiencias -->
@@ -83,6 +96,9 @@
 					</a>
 				<!-- 	<a class="contenido-link"></a> -->
 				</div>
+				<link rel="preconnect" href="https://fonts.googleapis.com">
+				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+				<link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 			</article>
 
 			<article class="galeria-experiencia">
@@ -138,6 +154,9 @@
 				<br>
 			</div>
 		</div>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 	</section>
 
 	<!-- Seccion de Contacto -->
@@ -153,7 +172,7 @@
 			</form>
 			
 			<div class="contactos-redes">
-				<a href="mailto:derricoelias@gmail.com?Subject=Interesado%20en%20Contactar%20Para%20Trabajo" target="_blank"><i class="fa fa-envelope" style="font-size:48px;color:rgb(168, 235, 255)"></i>
+				<a href="mailto:derricoelias@gmail.com?Subject=Interesado%20en%20Contactar%20Para%20Trabajo" target="_blank"><i class="icono fa fa-envelope" style="font-size:48px;color:rgb(168, 235, 255)"></i>
 				<!-- 	<img src="images/Captura de pantalla_20221127_214052.png" alt=""> -->
 				</a>
 				<a href="https://github.com/ELIAS2022D" target="_blank"><i class="icono fab fa-github"></i></a>
@@ -173,6 +192,9 @@
 			Designed with by 
 			<a href="https://www.linkedin.com/in/el%C3%ADas-daniel-d-errico-1135331aa/" target="_blank">@Elías Daniel D' Errico</a>
 		</p>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 	</footer>
 </body>
 </html>
