--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 					<img alt="imagen html de ejemplo" src="images/github-logo.webp" width="260" height="90"/>
 				</a>
 				<p class="informacion-descripcion">Comparto código en el enlace ⬆️ de la imagen de github</p>
+					
 				<link rel="preconnect" href="https://fonts.googleapis.com">
 				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 				<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -186,7 +187,9 @@
 	<footer class="footer container">
 		<p class="footer-agradecimientos">
 			Te Invito a Ver el Proyecto de esta Página 
-			<a href="https://github.com/ELIAS2022D/portfolio.gith" target="_blank">@ELIAS2022D/portfolio.gith</a>
+			<a href="https://github.com/ELIAS2022D/portfolio.gith" target="_blank">
+				<img src="images/Captura de pantalla 2022-11-30 135106.jpg" alt="">
+			</a>
 		</p>
 		<p class="footer-dedicatoria">
 			Designed with by 
