--- a/index.html
+++ b/index.html
@@ -138,18 +138,24 @@
 				<br>
 				<div class="conocimientos-elemento"><p>C#</p><p>Visual Basic</p></div>
 				<br>
+				<br>
+				<br>
 				<div class="conocimientos-elemento"><p>PhpMyAdmin</p></div>
 				<br>
 				
 			</div>
 			<figure class="conocimientos-leonidas-container">
 				
-				<a href="https://github.com/battlecat999/tldrame/commit/5524b23d452d1afd126127d6575d1814878f5b76" target="_blank" title="VER CÓDIGO EN:">
+				<a href="images/descarga.pdf" target="_blank" title="VER PDF">
 					<img class="conocimientos-leonidas" src="images/hombre-trabaja-programacion.webp" alt="Imagen de Elías"><br><br>
 				</a>
-				<a href="https://github.com/battlecat999/tldrame/commit/5524b23d452d1afd126127d6575d1814878f5b76" target="_blank" title="VER CÓDIGO EN:">
+				<br>
+				<br>
+				<a href="images/descarga (1).pdf" target="_blank" title="VER PDF">
 					<img class="conocimientos-leonidas" src="images/Captura de pantalla_20221211_150743.png" alt="Imagen de Elías"><br><br>
 				</a>
+				<br>
+				<br>
 			</figure>
 
 			<div class="conocimientos-columna">
@@ -161,6 +167,8 @@
 				<br>
 				<div class="conocimientos-elemento"><p>Visual Studio Code</p><p>GitHub</p></div>
 				<br>
+				<br>
+				<br>
 				<div class="conocimientos-elemento"><p>PgAdmin</p><p>Postgresql</p></div>
 				<br>
 			</div>
@@ -168,6 +176,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+		<br>
+		<br>
 	</section>
 
 	<!-- Seccion de Contacto -->
