--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		<p class="footer-agradecimientos">
 			Te Invito a Ver el Proyecto de esta Página 
 			<a href="https://github.com/ELIAS2022D/portfolio.gith" target="_blank">
-				<img src="images/Captura de pantalla 2022-11-30 135106.jpg" alt="">
+				<img src="images/Captura de pantalla_20221211_161024.png" alt="">
 			</a>
 		</p>
 		<p class="footer-dedicatoria">
