--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<br>
 				<br>
 				<a href="images/descarga (1).pdf" target="_blank" title="VER PDF">
-					<img class="conocimientos-leonidas" src="images/Captura de pantalla_20221211_150743.png" alt="Imagen de Elías"><br><br>
+					<img class="conocimientos-Elias" src="images/Captura de pantalla_20221211_150743.png" alt="Imagen de Elías"><br><br>
 				</a>
 				<br>
 				<br>
